# rk-flashtool

./: .gitignore  99-rk-rockusb.rules  CHANGELOG.md  CMakeLists.txt  DefineHeader.h  Makefile.am  README.md  RKComm.cpp  RKComm.h  RKScan.cpp  configure.ac  main.cpp
hardware/asiair-mini-rv1126/: inventory.md  openindi.md  recovery.md
hardware/asiair-plus-rk3568-256g/: asiair-kernel.config  asiair-plus.dts  backup.sh  flashtool-recovery.md  inventory.md  manual-restore.md  plan.md  pwm_gpio.h
jailbreak/: jailbreak.tar.bz2  run_jailbreak.py
scripts/: backup  flash-all  flash-rootfs  install  jailbreak  openindi  reset-device  restore-stock  status
scripts/debian/: asiair-create-image.sh  asiair-flash.sh  asiair-rootfs-setup.sh
scripts/lib/: build-gpt.py  gpt.sh
src/: DefineHeader.h  RKComm.cpp  RKDevice.cpp  RKScan.cpp  boot_merger.h  main.cpp
